--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,25 @@
 name: Python
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+#  schedule:
+#    - cron: '9 * * * *'
+  workflow_dispatch:
+
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,3 +33,38 @@ jobs:
 
     - name: Test with pytest
       run: pytest
+
+  generate:
+    runs-on: ubuntu-latest
+    name: Generate HTML
+    needs: test
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Setup Python
+      uses: actions/setup-python@v4
+
+    - name: Setup Pages
+      uses: actions/configure-pages@v2
+
+    - name: Generate HTML pages
+      run: |
+          python generate.py
+
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v1
+
+  # Deployment job
+  deploy:
+    if: github.ref == 'refs/heads/main'
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: generate
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
+
