--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
 
     - name: Setup Python
       uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
 
     - name: Install dependencies
       run: pip install pytest
@@ -44,6 +46,8 @@ jobs:
 
     - name: Setup Python
       uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
 
     - name: Setup Pages
       uses: actions/configure-pages@v2
