--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,29 +17,10 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
-
 jobs:
-  test:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.11
-
-    - name: Install dependencies
-      run: pip install pytest
-
-    - name: Test with pytest
-      run: pytest
-
   generate:
     runs-on: ubuntu-latest
     name: Generate HTML
-    needs: test
 
     steps:
     - uses: actions/checkout@v3
@@ -52,16 +33,15 @@ jobs:
     - name: Setup Pages
       uses: actions/configure-pages@v2
 
-    - name: Generate HTML pages
-      run: |
-          python generate.py
+    - name: Generate HTML Pages
+      uses: osdc-code-maven/osdc-site-generator@v1
 
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v1
 
   # Deployment job
   deploy:
-    if: github.ref == 'refs/heads/main'
+    #if: github.ref == 'refs/heads/main'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
