--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,12 @@ on:
 #    - cron: '9 * * * *'
   workflow_dispatch:
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+
 jobs:
   generate:
     uses: osdc-code-maven/osdc-2023-01-public/.github/workflows/ci.yml@main
